--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.9",
     "@lottiefiles/dotlottie-react": "^0.17.10",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
     "react": "^19.2.0",
