--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.9.6",
     "react-spinners": "^0.17.0",
+    "react-spring": "^10.0.3",
     "recharts": "^3.6.0",
     "sweetalert2": "^11.26.4",
     "tailwindcss": "^4.1.17"
